testsuite/gnatprove/tests/S313-042__flow_lessthan_crash/test.out
moth-config.ads:37:08: info: data dependencies proved
moth-config.ads:45:07: info: data dependencies proved
moth-mailbox.adb:192:07: info: initialization of "status" proved
moth-mailbox.adb:229:07: info: initialization of "status" proved
moth-mailbox.adb:237:07: info: initialization of "ret" proved
moth-mailbox.adb:354:07: info: initialization of "mbx_index" proved
moth-scheduler.adb:304:24: info: initialization of "task_id" proved
moth-scheduler.adb:313:17: warning: assuming "interrupt_is_pending" always returns
moth-scheduler.adb:313:17: warning: no returning annotation available for "interrupt_is_pending"
moth-scheduler.adb:324:17: warning: assuming "idle" always returns
moth-scheduler.adb:324:17: warning: no returning annotation available for "idle"
moth-scheduler.adb:327:20: warning: assuming "interrupt_is_pending" always returns
moth-scheduler.adb:327:20: warning: no returning annotation available for "interrupt_is_pending"
moth-scheduler.adb:368:07: info: initialization of "tmp_mask" proved
moth-scheduler.adb:442:14: warning: assuming "space_init" always returns
moth-scheduler.adb:442:14: warning: no returning annotation available for "space_init"
moth-scheduler.adb:456:17: warning: assuming "space_switch" always returns
moth-scheduler.adb:456:17: warning: no returning annotation available for "space_switch"
moth-scheduler.adb:459:17: warning: assuming "context_create" always returns
moth-scheduler.adb:459:17: warning: no returning annotation available for "context_create"
moth-scheduler.adb:471:14: warning: assuming "context_set" always returns
moth-scheduler.adb:471:14: warning: no returning annotation available for "context_set"
moth-scheduler.adb:474:14: warning: assuming "space_switch" always returns
moth-scheduler.adb:474:14: warning: no returning annotation available for "space_switch"
moth.adb:54:14: warning: assuming "cons_init" always returns
moth.adb:54:14: warning: no returning annotation available for "cons_init"
moth.ads:116:10: info: flow dependencies proved
moth.ads:144:10: info: initialization of "Model" proved
moth.ads:193:23: info: initialization of "task_id" proved
moth.ads:208:24: info: initialization of "task_id" proved
moth.ads:220:28: info: initialization of "task_id" proved
moth.ads:245:23: info: initialization of "task_id" proved
moth.ads:295:26: info: initialization of "status" proved
moth.ads:296:26: info: initialization of "mbx_entry" proved
moth.ads:306:23: info: initialization of "status" proved
moth.ads:326:20: info: initialization of "task_id" proved
spark-containers-formal-ordered_sets.ads:82:06: error: "moth.config.read_only_conf" is referenced in Post but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:156:09: error: "moth.config.read_only_conf" is referenced in Post but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:169:09: error: "moth.config.read_only_conf" is referenced in Post but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:1492:06: error: "moth.config.read_only_conf" is referenced in Post but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:1492:06: error: "moth.config.read_only_conf" is referenced in Pre but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:1507:06: error: "moth.config.read_only_conf" is referenced in Post but missing from the Global, in instantiation at moth.ads:127
spark-containers-formal-ordered_sets.ads:1507:06: error: "moth.config.read_only_conf" is referenced in Pre but missing from the Global, in instantiation at moth.ads:127
spark-containers-functional-maps.ads:285:13: info: subprogram "Copy_Key" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-ordered_sets.ads:283, in instantiation at moth.ads:127
spark-containers-functional-maps.ads:286:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-ordered_sets.ads:283, in instantiation at moth.ads:127
spark-containers-functional-sets.ads:268:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at moth.ads:131
spark-containers-functional-sets.ads:268:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-ordered_sets.ads:120, in instantiation at moth.ads:127
spark-containers-functional-vectors.ads:100:13: info: subprogram "First" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-ordered_sets.ads:132, in instantiation at moth.ads:127
spark-containers-functional-vectors.ads:101:06: info: data dependencies proved, in instantiation at spark-containers-formal-ordered_sets.ads:132, in instantiation at moth.ads:127
spark-containers-functional-vectors.ads:277:13: info: subprogram "Copy_Element" will terminate, terminating annotation has been proved, in instantiation at spark-containers-formal-ordered_sets.ads:132, in instantiation at moth.ads:127
gnatprove: error during flow analysis and proof
